Fix hamburger menu styling, add vertical align / row-col structure to the generate list DOM for externals

--- a/public/stylesheets/pen.css
+++ b/public/stylesheets/pen.css
@@ -269,7 +269,7 @@ input#penName {
 
 
 .collection .external-input {
-    width: 80% !important;
+    width: 95% !important;
     line-height: 20px !important;
     height: 25px !important;
     padding: 0 !important;
